service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quotes
spec:
  type: NodePort
  selector:
    app: quotes
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31001
